update folder name

--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -4,8 +4,10 @@ metadata:
   name: sample-go-app
 spec:
   selector:
+    replicas: 2
     matchLabels:
       app: sample-go-app
+  
   template:
     metadata:
       labels:
