--- a/manifest/application.yaml
+++ b/manifest/application.yaml
@@ -1,8 +1,8 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: myapp-argo-application
-  namespace: default
+  name: argo-application-sample-go-app
+  namespace: argocd
 spec:
   project: default
 
