--- a/manifest/deployment.yaml
+++ b/manifest/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: sample-go-app
-        image: sample-go-app:latest
+        image: sample-go-app:v1.0.0
         imagePullPolicy: Never
         ports:
         - containerPort: 8081
