--- a/sample-go-app/Makefile
+++ b/sample-go-app/Makefile
@@ -1,2 +1,5 @@
 build:
-	docker build -t sample-go-app .
+	docker build -t sample-go-app:v1.0.0 .
+
+publish:
+	kind load docker-image sample-go-app:v1.0.0
